<resources>


    <string name="welcome_nto_medicare">Welcome\nTo Medicare</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="dont_have_an_account">Dont have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_login">Sign Up</string>
    <string name="sign_up_phar">SIGN UP</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="accept_terms_and_conditions">Accept terms and conditions</string>
    <string name="postal_address">Postal Address</string>
    <string name="Password_phar">Password</string>
    <string name="phone_number_phar">Phone Number</string>
    <string name="email_phar">Email</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="username_phar">Username</string>
    <string name="licence_number">Licence Number</string>
    <string name="pharmacy_registration">Pharmacy Registration</string>
    <string name="sign_up_cus">SIGN UP</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username_cus">Username</string>
    <string name="phone_number_cus">Phone Number</string>
    <string name="email_cus">Email</string>
    <string name="postal_address_cus">Postal Address</string>
    <string name="password_cus">Password</string>
    <string name="re_enter_password_cus">Re Enter Password</string>
    <string name="accept_terms_and_conditions_cus">Accept terms and conditions</string>



    <string name="app_name">MediCare</string>
    <!--Add and Edit a drug-->
    <string name="drug_name">Drug Name :</string>
    <string name="manufacture_name">Manufacture Name :</string>
    <string name="manufacture_date">Manufacture Date :</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="category">Category</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="quantity">Quantity</string>
    <string name="name_of_the_drug">Name of the Drug :</string>
    <string name="drug_description">Drug Description :</string>
    <string name="manufactured_by">Manufactured By :</string>
    <!--Other Strings-->
    <string name="add_a_new_drug">Add a new Drug</string>
    <string name="ManufacturerName">Hemas Pharmaceuticals (Pvt) Ltd</string>
    <string name="healthCareProviderName">Union Chemists</string>
    <!--Button Names-->
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_add">Add</string>
    <string name="btnUpdate">Update</string>
    <string name="_100ml_rs_850">100ml - Rs 850/=</string>
</resources>