<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back15"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".AddMedicine">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="@dimen/PharmacyProviderUserProfileWidth"
        android:layout_height="@dimen/PharmacyProviderProfileHeight"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="194dp"
        android:layout_height="35dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="10dp"
        android:text="@string/healthCareProviderName"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backArrowIcon"
        android:layout_width="@dimen/BackIconWidth"
        android:layout_height="@dimen/BackIconHeight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/idEditDrug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="126dp"
        android:fontFamily="@font/pt_sans_caption"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/add_a_new_drug"
        android:textColor="@color/black"
        android:textSize="@dimen/AddANewDrugTextSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <EditText
        android:id="@+id/idDrugName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_local_hospital_24"
        android:drawablePadding="15dp"
        android:textColorHint="#717070"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/drug_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEditDrug" />

    <EditText
        android:id="@+id/idDescription"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/descreption_icon"
        android:drawablePadding="20dp"
        android:hint="Descreption"
        android:textColorHint="#717070"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/idDrugName"
        app:layout_constraintStart_toStartOf="@+id/idDrugName"
        app:layout_constraintTop_toBottomOf="@+id/idDrugName" />

    <EditText
        android:id="@+id/idUnitPrice"
        android:layout_width="0dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_attach_money_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/price_per_unit"
        android:textColorHint="#717070"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/idCategory"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idCategory" />

    <EditText
        android:id="@+id/idQnt"
        android:layout_width="0dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_numbers_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/quantity"
        android:textColorHint="#717070"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/idCategory"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idUnitPrice"
        app:layout_constraintTop_toBottomOf="@+id/idUnitPrice" />

    <EditText
        android:id="@+id/idManufactureName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_drive_file_rename_outline_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:textColorHint="#717070"
        android:hint="@string/manufacture_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/idDrugName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idDrugName"
        app:layout_constraintTop_toBottomOf="@+id/idDescription" />

    <EditText
        android:id="@+id/idCategory"
        android:layout_width="0dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_category_24"
        android:drawableRight="@drawable/baseline_keyboard_arrow_down_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/category"
        android:textColorHint="#717070"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/idExpiryDare"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/idExpiryDare"
        app:layout_constraintTop_toBottomOf="@+id/idExpiryDare" />

    <EditText
        android:id="@+id/idManufactureDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_horizontal_rule_24"
        android:drawableRight="@drawable/baseline_calendar_month_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/manufacture_date"
        android:textColorHint="#717070"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/idManufactureName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idManufactureName"
        app:layout_constraintTop_toBottomOf="@+id/idManufactureName" />

    <EditText
        android:id="@+id/idExpiryDare"
        android:layout_width="0dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_horizontal_rule_24"
        android:drawableRight="@drawable/baseline_calendar_month_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/expiry_date"
        android:inputType="date"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/idManufactureDate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/idManufactureDate"
        app:layout_constraintTop_toBottomOf="@+id/idManufactureDate"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="@dimen/AddBtnWidth"
        android:layout_height="@dimen/AddBtnHeight"
        android:layout_marginTop="20dp"
        android:backgroundTint="#148AFF"
        android:text="@string/btn_add"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="45px"
        app:layout_constraintEnd_toEndOf="@+id/idCategory"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/idCategory"
        app:layout_constraintTop_toBottomOf="@+id/idQnt" />

</androidx.constraintlayout.widget.ConstraintLayout>