<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transparent2"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/idEditDrug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="126dp"
        android:fontFamily="@font/pt_sans_caption"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Edit Drug"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/idDrugName"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_local_hospital_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="6dp"
        android:text="Corex D Cough Syrups"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/idDescription"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_drive_file_rename_outline_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="Corex-D cough syrup is indicated..."
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/idDrugName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idDrugName"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/idCategory"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_category_24"
        android:drawableRight="@drawable/baseline_keyboard_arrow_down_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="7dp"
        android:text="Syrups"
        app:layout_constraintEnd_toEndOf="@+id/idExpireDate"
        app:layout_constraintStart_toStartOf="@+id/idManufactureDate"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/idManufactureName"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_settings_suggest_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/ManufacturerName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/idDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/idManufactureDate"
        android:layout_width="175dp"
        android:layout_height="37dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/inputs_background"
        android:drawableRight="@drawable/baseline_calendar_month_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:inputType="date"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="2022.12.05"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/idPrice"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_attach_money_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="Rs 850/="
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/idExpireDate"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/inputs_background"
        android:drawableRight="@drawable/amoxcillin"
        android:drawablePadding="15dp"
        android:ems="10"
        android:inputType="date"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:paddingTop="2dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="2024-12-05"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/idQuantity"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/inputs_background"
        android:drawableLeft="@drawable/baseline_numbers_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:paddingTop="2dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="30"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="@dimen/EditBtnWidth"
        android:layout_height="@dimen/EditBtnHeight"
        android:layout_marginTop="12dp"
        android:backgroundTint="#148AFF"
        android:text="@string/btnUpdate"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="40px"
        app:layout_constraintEnd_toEndOf="@+id/idCategory"
        app:layout_constraintStart_toStartOf="@+id/idCategory"
        app:layout_constraintTop_toBottomOf="@+id/idPrice" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/name_of_the_drug"
        android:textColor="@color/black"
        android:textSize="@dimen/SubTitleTextSize"
        app:layout_constraintStart_toStartOf="@+id/idEditDrug"
        app:layout_constraintTop_toBottomOf="@+id/idEditDrug" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/drug_description"
        android:textColor="@color/black"
        android:textSize="@dimen/SubTitleTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDrugName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/manufactured_by"
        android:textColor="@color/black"
        android:textSize="@dimen/SubTitleTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDescription" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/manufacture_date"
        android:textColor="@color/black"
        android:textSize="@dimen/SubTitleTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idManufactureName" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/price_per_unit"
        android:textColor="@color/black"
        android:textSize="@dimen/SubTitleTextSize"
        app:layout_constraintStart_toStartOf="@+id/idCategory"
        app:layout_constraintTop_toBottomOf="@+id/idCategory" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/expiry_date"
        android:textColor="@color/black"
        android:textSize="@dimen/SubTitleTextSize"
        app:layout_constraintEnd_toEndOf="@+id/idManufactureName"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/expiry_date"
        android:textColor="@color/black"
        android:textSize="@dimen/SubTitleTextSize"
        app:layout_constraintEnd_toEndOf="@+id/idManufactureName"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="@dimen/SubTitleTextSize"
        app:layout_constraintEnd_toEndOf="@+id/idCategory"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/idCategory" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="@dimen/SubTitleTextSize"
        app:layout_constraintStart_toStartOf="@+id/idManufactureDate"
        app:layout_constraintTop_toBottomOf="@+id/idManufactureDate" />

    <ImageView
        android:id="@+id/pharmacyImage"
        android:layout_width="@dimen/PharmacyProviderUserProfileWidth"
        android:layout_height="@dimen/PharmacyProviderProfileHeight"
        android:layout_marginTop="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="42dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/healthCareProviderName"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/pharmacyImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

